force-app/main/default/objects/HRStandard__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>After approval, checkbox will be checked.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>