force-app/main/default/objects/HRStandard__c/fields/BaseNumber__c.field-meta.xml
<CustomField>
    <fullName>BaseNumber__c</fullName>
    <defaultValue>20</defaultValue>
    <label>BASE NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>