force-app/main/default/objects/HRStandard__c/fields/BudgetForAirticketCostPerMonth__c.field-meta.xml
<CustomField>
    <fullName>BudgetForAirticketCostPerMonth__c</fullName>
    <label>BUDGET FOR AIRTICKET COST PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>