force-app/main/default/objects/HRStandard__c/fields/BudgetForGasolinePerMonth__c.field-meta.xml
<CustomField>
    <fullName>BudgetForGasolinePerMonth__c</fullName>
    <label>BUDGET FOR GASOLINE PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>