force-app/main/default/objects/HRStandard__c/fields/BudgetForHousingPerMonth__c.field-meta.xml
<CustomField>
    <fullName>BudgetForHousingPerMonth__c</fullName>
    <label>BUDGET FOR HOUSING PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>