force-app/main/default/objects/HRStandard__c/fields/BudgetForRElocationCostPerMonth__c.field-meta.xml
<CustomField>
    <fullName>BudgetForRElocationCostPerMonth__c</fullName>
    <label>BUDGET FOR RELOCATION COST PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>