force-app/main/default/objects/HRStandard__c/fields/BudgetForTelephonePerMonth__c.field-meta.xml
<CustomField>
    <fullName>BudgetForTelephonePerMonth__c</fullName>
    <label>BUDGET FOR TELEPHONE PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>