force-app/main/default/objects/HRStandard__c/fields/BudgetForUniformPerMonth__c.field-meta.xml
<CustomField>
    <fullName>BudgetForUniformPerMonth__c</fullName>
    <label>BUDGET FOR UNIFORM PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>