force-app/main/default/objects/HRStandard__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>TODAY()+364</defaultValue>
    <label>END DATE</label>
    <type>Date</type>
</CustomField>