force-app/main/default/objects/HRStandard__c/fields/FemaleRetirementAge__c.field-meta.xml
<CustomField>
    <fullName>FemaleRetirementAge__c</fullName>
    <defaultValue>55</defaultValue>
    <label>FEMALE RETIREMENT AGE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>