force-app/main/default/objects/HRStandard__c/fields/HealthInsuranceRatioByEmployee__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceRatioByEmployee__c</fullName>
    <defaultValue>0.015</defaultValue>
    <label>HEALTH INSURANCE RATIO BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>