force-app/main/default/objects/HRStandard__c/fields/HealthInsuranceRatioByEmployer__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceRatioByEmployer__c</fullName>
    <defaultValue>0.03</defaultValue>
    <label>HEALTH INSURANCE RATIO BY EMPLOYER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>