force-app/main/default/objects/HRStandard__c/fields/HSUInsuranceRatioByEmployee__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceRatioByEmployee__c</fullName>
    <formula>HealthInsuranceRatioByEmployee__c  +  SocialInsuracneRatioByEmployee__c  +  UnemploymentFundRatioByEmployee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H/S/UNEM INSURANCE RATIO BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>