force-app/main/default/objects/HRStandard__c/fields/HSUInsuranceRatioByEmployee_r__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceRatioByEmployee_r__c</fullName>
    <formula>HSUInsuranceRatioByEmployee__c  +  HSUInsuranceRatioByEmployer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H/S/UNEM INSURANCE RATIO BY EMPLOYEE/R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>