force-app/main/default/objects/HRStandard__c/fields/HSUInsuranceRatioByEmployer__c.field-meta.xml
<CustomField>
    <fullName>HSUInsuranceRatioByEmployer__c</fullName>
    <formula>HealthInsuranceRatioByEmployer__c  +  SocialInsuranceRatioByEmployer__c  +  UnemploymentFundRatioByEmployer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H/S/UNEM INSURANCE RATIO BY EMPLOYER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>