force-app/main/default/objects/HRStandard__c/fields/MasterHRPolicyID__c.field-meta.xml
<CustomField>
    <fullName>MasterHRPolicyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MASTER HR POLICY ID</label>
    <referenceTo>HRStandard__c</referenceTo>
    <relationshipLabel>SUPPLEMENT HR POLICY</relationshipLabel>
    <relationshipName>MasterHRPolicy</relationshipName>
    <type>Lookup</type>
</CustomField>