force-app/main/default/objects/HRStandard__c/fields/mealallowancepermonth__c.field-meta.xml
<CustomField>
    <fullName>mealallowancepermonth__c</fullName>
    <label>Meal Allowance per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>