force-app/main/default/objects/HRStandard__c/fields/overtimerange3__c.field-meta.xml
<CustomField>
    <fullName>overtimerange3__c</fullName>
    <inlineHelpText>Is the salary coefficient that the employee will receive if there is overtime at this range</inlineHelpText>
    <label>Overtime range 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>