force-app/main/default/objects/HRStandard__c/fields/OvertimeWorkingApplied__c.field-meta.xml
<CustomField>
    <fullName>OvertimeWorkingApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OVERTIME WORKING APPLIED</label>
    <type>Checkbox</type>
</CustomField>