force-app/main/default/objects/HRStandard__c/fields/PaidPersonalLeaveChildDeath__c.field-meta.xml
<CustomField>
    <fullName>PaidPersonalLeaveChildDeath__c</fullName>
    <defaultValue>3</defaultValue>
    <label>PAID PERSONAL LEAVE-CHILD DEATH(DAYS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>