force-app/main/default/objects/HRStandard__c/fields/PaidPersonalLeaveChildMarriage__c.field-meta.xml
<CustomField>
    <fullName>PaidPersonalLeaveChildMarriage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>PAID PERSONAL LEAVE-CHILD MARRIAGE(DAYS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>