force-app/main/default/objects/HRStandard__c/fields/PaidPersonalLeaveParentDeath__c.field-meta.xml
<CustomField>
    <fullName>PaidPersonalLeaveParentDeath__c</fullName>
    <defaultValue>3</defaultValue>
    <label>PAID PERSONAL LEAVE-PARENTS DEATH(DAYS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>