force-app/main/default/objects/HRStandard__c/fields/PaidPersonalLeaveSpouseDeath__c.field-meta.xml
<CustomField>
    <fullName>PaidPersonalLeaveSpouseDeath__c</fullName>
    <defaultValue>3</defaultValue>
    <label>PAID PERSONAL LEAVE-SPOUSE DEATH(DAYS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>