force-app/main/default/objects/HRStandard__c/fields/SalaryBaseUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>SalaryBaseUnitAmount__c</fullName>
    <defaultValue>1310000</defaultValue>
    <label>MINIMUM SALARY BASE UNIT AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>