force-app/main/default/objects/HRStandard__c/fields/SalaryPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>SalaryPaymentDate__c</fullName>
    <inlineHelpText>The date salary is paid.</inlineHelpText>
    <label>SALARY PAYMENT DATE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End Of This Month</fullName>
                <default>true</default>
                <label>End Of This Month</label>
            </value>
            <value>
                <fullName>1st Of This Month</fullName>
            </value>
            <value>
                <fullName>2nd Of This Month</fullName>
            </value>
            <value>
                <fullName>3rd Of This Month</fullName>
            </value>
            <value>
                <fullName>5th Of This Month</fullName>
            </value>
            <value>
                <fullName>10th Of This Month</fullName>
            </value>
            <value>
                <fullName>15th Of This Month</fullName>
            </value>
            <value>
                <fullName>20th Of This Month</fullName>
            </value>
            <value>
                <fullName>25th Of This Month</fullName>
            </value>
            <value>
                <fullName>30th Of This Month</fullName>
            </value>
            <value>
                <fullName>31th Of This Month</fullName>
            </value>
            <value>
                <fullName>End of Next Month</fullName>
            </value>
            <value>
                <fullName>1st Of Next Month</fullName>
            </value>
            <value>
                <fullName>2nd Of Next Month</fullName>
            </value>
            <value>
                <fullName>3rd Of Next Month</fullName>
            </value>
            <value>
                <fullName>5th Of Next Month</fullName>
            </value>
            <value>
                <fullName>10th Of Next Month</fullName>
            </value>
            <value>
                <fullName>15th Of Next Month</fullName>
            </value>
            <value>
                <fullName>20th Of Next Month</fullName>
            </value>
            <value>
                <fullName>25th Of Next Month</fullName>
            </value>
            <value>
                <fullName>30th Of Next Month</fullName>
            </value>
            <value>
                <fullName>31th Of Next Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>