force-app/main/default/objects/HRStandard__c/fields/salarytocontributesocialinsurance__c.field-meta.xml
<CustomField>
    <fullName>salarytocontributesocialinsurance__c</fullName>
    <label>Salary to Contribute Social Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>