force-app/main/default/objects/HRStandard__c/fields/SocialInsuracneRatioByEmployee__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuracneRatioByEmployee__c</fullName>
    <defaultValue>0.08</defaultValue>
    <label>SOCIAL INSURANCE RATIO BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>