force-app/main/default/objects/HRStandard__c/fields/TAXAdjustRange2__c.field-meta.xml
<CustomField>
    <fullName>TAXAdjustRange2__c</fullName>
    <defaultValue>250000</defaultValue>
    <inlineHelpText>Tax adjust greater 5m VND &amp; less or equal 10m VND</inlineHelpText>
    <label>TAX ADJUST RANGE 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>