force-app/main/default/objects/HRStandard__c/fields/TAXAdjustRange4__c.field-meta.xml
<CustomField>
    <fullName>TAXAdjustRange4__c</fullName>
    <defaultValue>1650000</defaultValue>
    <inlineHelpText>Tax adjust greater 18m VND &amp; less or equal 32m VND</inlineHelpText>
    <label>TAX ADJUST RANGE 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>