force-app/main/default/objects/HRStandard__c/fields/TAXRatioRange4__c.field-meta.xml
<CustomField>
    <fullName>TAXRatioRange4__c</fullName>
    <defaultValue>0.2</defaultValue>
    <inlineHelpText>Tax ratio-greater 18m VND &amp; less or equal 32m VND</inlineHelpText>
    <label>TAX RATIO RANGE 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>