force-app/main/default/objects/HRStandard__c/fields/TAXRatioRange5__c.field-meta.xml
<CustomField>
    <fullName>TAXRatioRange5__c</fullName>
    <defaultValue>0.25</defaultValue>
    <inlineHelpText>Tax ratio-greater 32m VND &amp; less or equal 52m VND</inlineHelpText>
    <label>TAX RATIO RANGE 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>