force-app/main/default/objects/HRStandard__c/fields/TAXRatioRange6__c.field-meta.xml
<CustomField>
    <fullName>TAXRatioRange6__c</fullName>
    <defaultValue>0.3</defaultValue>
    <inlineHelpText>Tax ratio-greater 52m VND &amp; less or equal 80m VND</inlineHelpText>
    <label>TAX RATIO RANGE 6</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>