force-app/main/default/objects/HRStandard__c/fields/UnemploymentFundRatioByEmployee__c.field-meta.xml
<CustomField>
    <fullName>UnemploymentFundRatioByEmployee__c</fullName>
    <defaultValue>0.01</defaultValue>
    <label>UNEMPLOYMENT FUND RATIO BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>