force-app/main/default/objects/HRStandard__c/fields/uniformallowancepermonth__c.field-meta.xml
<CustomField>
    <fullName>uniformallowancepermonth__c</fullName>
    <label>Uniform Allowance per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>