force-app/main/default/objects/HRStandard__c/fields/unionfundratiobyemployer__c.field-meta.xml
<CustomField>
    <fullName>unionfundratiobyemployer__c</fullName>
    <label>Union fund ratio by Employer</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>