force-app/main/default/objects/HRStandard__c/fields/USUInsuranceTerm__c.field-meta.xml
<CustomField>
    <fullName>USUInsuranceTerm__c</fullName>
    <label>H/S/UNEM INSURANCE PAYMENT TERM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>