force-app/main/default/objects/HRStandard__c/recordTypes/MasterHRPolicy.recordType-meta.xml
<RecordType>
    <fullName>MasterHRPolicy</fullName>
    <active>true</active>
    <label>Master HR Policy</label>
</RecordType>