force-app/main/default/objects/HRStandard__c/recordTypes/SuppHRPolicy.recordType-meta.xml
<RecordType>
    <fullName>SuppHRPolicy</fullName>
    <active>false</active>
    <label>Supplement HR Policy</label>
</RecordType>