force-app/main/default/objects/HRStandard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CloHRMSetupName__c</columns>
    <columns>Active__c</columns>
    <columns>CutOffDateForPayrollPeriod__c</columns>
    <columns>SalaryPaymentDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>HRManager</role>
        <role>HRStaff</role>
    </sharedTo>
</ListView>